# fundamentus_scrapper

./: LICENSE  Main.py  README.md  pyproject.toml
docs/MyLearnings/: 00-python_project_vscode_checklist.md  01-pyenv-vscode-setup.md  02-poetry-setup.md  03-pytest_reference.md
src/: config.py  main.py  parser.py  run_tests.py
src/filters/: filters.py
src/fundamentus_scrapper/: __init__.py  __main__.py  config.py  parser.py  run_tests.py  scrapper.py
src/gui/: tk_app.py
src/scrapper/: csv_utils.py  parser.py  scrapper.py
tests/: conftest.py  test_csv_utils.py  test_filters.py  test_parser.py  test_tk_app.py
tests/data/: stocks.csv
